styles.css
:root {
    --white-color: #ffffff;
    --dark-color: #000000;
    --dark-grey-color: #1f2937;
    --light-grey-color: #e5e7eb;
    --alt-light-grey-color: #f9faf8;
    --highlight-color: #3882f6;
}

*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    width: 100vw;
    font-size: 18px;
}

img {
    width: 100%;
    height: auto;
}

.container {
    width: 60vw;
    margin: 0 auto;
}

/* HEADER */

header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}


header {
    background-color: var(--dark-grey-color);
    padding: 32px 0px;
}

nav {
    color: var(--light-grey-color);
}

ul {
    font-weight: 400;
    font-size: 18px;
    list-style: none;
    display: flex;
    gap: 30px;
}

.logo {
    font-size: 24px;
    font-weight: 700;
    color: var(--alt-light-grey-color);
}

/* HERO CONTENT */

.hero-section {
    background-color: var(--dark-grey-color);
    display: flex;
    justify-content: center;
    padding: 32px 0 64px 0;
}

.hero-section .container {
    display: flex;
    align-items: center;
    gap: 60px;
    flex-wrap: wrap;
}

h1 {
    font-size: 48px;
    color: var(--alt-light-grey-color);
    margin-bottom: 10px;
}

.hero-text p {
    color: var(--light-grey-color);
    font-size: 18px;
    margin-bottom: 20px;
}

button {
    color: var(--white-color);
    background-color: var(--highlight-color);
    font-weight: 700;
    font-size: 18px;
    padding: 10px 25px;
    border: 0;
    border-radius: 10px;
}

.hero-text, .hero-img {
    flex: 1;
    min-width: 320px;
}

/* SERVICES */

.services-section {
    padding: 10vh 0;
    text-align: center;
}

h2 {
    font-size: 36px;
    margin-bottom: 64px;
}

.services-section .container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 60px;
    margin: 0 auto;
}

.icon {
    width: 100%;
    height: 0;
    padding-bottom: 100%;
    border: 2px solid var(--highlight-color);
    border-radius: 25px;
    margin-bottom: 10px;
}

.service {
    color: var(--dark-grey-color);
    flex: 0 1 200px;
    font-size: 18px;
}

/* QUOTE */

.quote-section {
    background-color: var(--light-grey-color);
    padding: 10vh 0;
}

figcaption {
    text-align: right;
    font-size: 24px;
    font-weight: 700;
}

blockquote {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}

/* CALL TO ACTION */

.cta-section {
    padding: 10vh 0;
}

.cta-section .container {
    background-color: var(--highlight-color);
    color: var(--white-color);
    flex-wrap: wrap;
    display: flex;
    justify-content: space-between;
    margin: 0 auto;
    padding: 32px 64px;
    border-radius: 5px;
}

.cta-button {
    border: 2px solid var(--white-color);
}

/* FOOTER */

footer {
    background-color: var(--dark-grey-color);
    color: var(--light-grey-color);
    padding: 32px 0;
    text-align: center;
}

